objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>Acct_Team_Action__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StartAccountTeamSync?retId=&quot; &amp; Id, &quot;Sync&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Team Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_PL__c</fullName>
        <label>Business Unit (PL)</label>
        <picklist>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_BU_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Region/BU Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Regional_Manager_Unique_Key__c</fullName>
        <label>Regional Manager Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1_Prior_Value__c</fullName>
        <label>Role 1 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1_Processed_D_T__c</fullName>
        <label>Role 1 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>Role_Definition__c.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_2_Prior_Value__c</fullName>
        <label>Role 2 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_2_Processed_D_T__c</fullName>
        <label>Role 2 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>Role_Definition__c.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Regions (Role 2)</relationshipLabel>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_3_Prior_Value__c</fullName>
        <label>Role 3 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_3_Processed_D_T__c</fullName>
        <label>Role 3 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>Role_Definition__c.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Regions (Role 3)</relationshipLabel>
        <relationshipName>Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unknown_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_1_Prior_Value__c</fullName>
        <label>User 1 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_1_Processed_D_T__c</fullName>
        <label>User 1 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_2_Prior_Value__c</fullName>
        <label>User 2 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_2_Processed_D_T__c</fullName>
        <label>User 2 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_3_Prior_Value__c</fullName>
        <label>User 3 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_3_Processed_D_T__c</fullName>
        <label>User 3 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>Role_1__c</columns>
        <columns>Role_2__c</columns>
        <columns>Role_3__c</columns>
        <columns>Role_4__c</columns>
        <columns>Role_5__c</columns>
        <columns>User_1__c</columns>
        <columns>User_2__c</columns>
        <columns>User_3__c</columns>
        <columns>User_4__c</columns>
        <columns>User_5__c</columns>
        <columns>Processed_D_T__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HAY_Regions</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>HAY</value>
        </filters>
        <label>HAY Regions</label>
    </listViews>
    <listViews>
        <fullName>Unknown_Regions</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Unknown</value>
        </filters>
        <label>Unknown Regions</label>
    </listViews>
    <listViews>
        <fullName>VAT_Regions</fullName>
        <columns>NAME</columns>
        <columns>Allow_Deletion__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>Role_1_Processed_D_T__c</columns>
        <columns>Role_2_Processed_D_T__c</columns>
        <columns>Role_3_Processed_D_T__c</columns>
        <columns>User_1_Processed_D_T__c</columns>
        <columns>User_2_Processed_D_T__c</columns>
        <columns>User_3_Processed_D_T__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VAT</value>
        </filters>
        <label>VAT Regions</label>
    </listViews>
    <listViews>
        <fullName>VIN_Regions</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VIN</value>
        </filters>
        <label>VIN Regions</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Users_and_Roles_must_correspond</fullName>
        <active>true</active>
        <description>Each User entered must have a corresponding Role, and vice versa.</description>
        <errorConditionFormula>OR(
ISBLANK(User_1__c)&lt;&gt;ISBLANK(Role_1__c),
ISBLANK(User_2__c)&lt;&gt;ISBLANK(Role_2__c),
ISBLANK(User_3__c)&lt;&gt;ISBLANK(Role_3__c),
ISBLANK(User_4__c)&lt;&gt;ISBLANK(Role_4__c),
ISBLANK(User_5__c)&lt;&gt;ISBLANK(Role_5__c)
)</errorConditionFormula>
        <errorMessage>Each User entered must have a corresponding Role, and vice versa.</errorMessage>
    </validationRules>
</CustomObject>